--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,7 +1,13 @@
-<h1>My Tweets, Yeah</h1>
+<h1>My Tweets, Yeah!</h1>
 
 <% @tweets.each do |tweet| %>
 
-<div><%= link_to tweet.content, tweet_path(tweet) %></div>
+<div>
+	<%= link_to "#{tweet.content}", tweet_path(tweet) %>
+</div>
+
+<div>
+	Posted <%= time_ago_in_words(tweet.created_at) %> days ago.
+</div>
 
 <% end %>
