--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,3 +1,14 @@
 <h1>It's A Tweet!</h1>
-<p><%= @tweet.content %></p>
-<p><%= link_to "All Tweets", tweets_path %>
+
+<div>
+
+	<%= @tweet.content %>
+
+	<p>This tweet is <%= @tweet.content.length %> characters long.</p>
+
+	<p>This tweet was posted <%= time_ago_in_words(@tweet.created_at) %> ago.</p>
+
+
+</div>
+
+<p><%= link_to "All Tweets", tweets_path %></p>
